changed photo link for trout

--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
 <body>
 <h3> My Hobbies</h3>
         <ol>
-            <li><a href="https://photos.google.com/search/fish/photo/AF1QipMuqXSuzCPS1Jk3moVxon71GshrnwT7lE2aag3x">Fly fishing</a></li>
+            <li><img src="fish.jpg" alt="photo of a trout" width="200" height="200">Fly fishing</a></li>
             <li>Course Angling</li>
             <li>Golf</li>
             <li>Computer Programing</li>
