chages to fish link

--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
 <body>
 <h3> My Hobbies</h3>
         <ol>
-            <li><img src="fish.jpg" alt="photo of a trout" width="200" height="200">Fly fishing</a></li>
+            <li><a href="fish.jpg">Fly fishing</a></li>
             <li>Course Angling</li>
             <li>Golf</li>
             <li>Computer Programing</li>
