Changed profile pic

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="fish.jpg" alt="Steve Beardsley profile picture" width="200" height="200"></td>
+                <td><img src="stevenProfile.jpg" alt="Steve Beardsley profile picture" width="200" height="200"></td>
                 <td><h1>Steve Beardsley</h1>
         <p><em>Principal Commissioning Engineer</em>
         <p>43 years experience in Coke Oven operation, improvement & repairs.</P>
